--- a/authorization_code/public/main.css
+++ b/authorization_code/public/main.css
@@ -5,7 +5,7 @@ div
 button
 {
 	background-color: #ffff64;
-	border: none;
+	border: solid;
 	padding: 15px 32px;
 	text-align: center;
 	text-decoration: none;
